Adding spring recurity